--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,11 @@ body {
   outline: none;
   padding: 10px;
 }
+
+/* Date Picker */
+.react-datetime-picker input:focus {
+  outline: none;
+}
+.react-datetime-picker__wrapper {
+  border: 0px solid gray !important;
+}
