--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,17 @@ body {
 .react-datetime-picker__wrapper {
   border: 0px solid gray !important;
 }
+
+/* FABS */
+.fab {
+  border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+  bottom: 25px;
+  font-size: 30px;
+  padding: 25px;
+  position: fixed;
+  right: 25px;
+}
