--- a/src/components/LoginScreen/LoginScreen.css
+++ b/src/components/LoginScreen/LoginScreen.css
@@ -1,5 +1,10 @@
+.login-screen {
+  height: 100vh;
+  /* background-color: red; */
+}
+
 .login-container {
-  margin-top: 15%;
+  padding-top: 10%;
 }
 .login-form-1 {
   border-radius: 5px;
